--- a/src/produto.html
+++ b/src/produto.html
@@ -52,7 +52,7 @@
                     </div>
                     <div class="row mb-3">
                         <div class="col-md-12">
-                            <label for="details" class="form-label">Foto</label>
+                            <label for="details" class="form-label">Detalhes</label>
                             <input type="text" class="form-control form-control-sm" id="details" name="details" placeholder="Detalhes" required>
                         </div>
                     </div>
