--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -6,6 +6,7 @@
     <title>Cadastro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css"> <!-- Link para o arquivo de CSS -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <header>
@@ -234,7 +235,13 @@
         else {
             //CEP não Encontrado.
             limpa_formulário_cep();
-            alert("CEP não encontrado.");
+
+            //Sweetalert2
+            Swal.fire({
+                title: "CEP não encontrado!",
+                text: "CEP não encontrado!",
+                icon: "error"
+            });
         }
     }
         
@@ -271,7 +278,13 @@
             else {
                 //cep é inválido.
                 limpa_formulário_cep();
-                alert("Formato de CEP inválido.");
+
+                //Sweetalert2
+                Swal.fire({
+                    title: "Formato de CEP inválido!",
+                    text: "Formato de CEP inválido!",
+                    icon: "error"
+                });
             }
         } //end if.
         else {
@@ -296,11 +309,27 @@
             .then(response => response.json())
             .then(data => {
                 console.log('Sucesso:', data);
-                alert('Usuário adicionado com sucesso!');
+
+                //Sweetalert2
+                Swal.fire({
+                    title: "Usuário adicionado com sucesso!",
+                    text: "Usuário adicionado com sucesso!",
+                    icon: "success"
+                }).then(() => {
+                    // Redireciona para a página index.html
+                    window.location.href = "index.html";
+                });
+
             })
             .catch((error) => {
                 console.error('Erro:', error);
-                alert('Erro ao adicionar usuário.');
+
+                //Sweetalert2
+                Swal.fire({
+                    title: "Erro ao adicionar usuário!",
+                    text: "Erro ao adicionar usuário!",
+                    icon: "error"
+                });
             });
         });
     </script>
