--- a/src/contato.html
+++ b/src/contato.html
@@ -6,6 +6,7 @@
     <title>Fale conosco</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css"> <!-- Link para o arquivo de CSS -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <header>
@@ -172,7 +173,16 @@
             .then(response => response.json())
             .then(data => {
                 console.log('Sucesso:', data);
-                alert('Fale conosco adicionado com sucesso!');
+
+                //Sweetalert2
+                Swal.fire({
+                    title: "Fale conosco adicionado com sucesso!",
+                    text: "Fale conosco adicionado com sucesso!",
+                    icon: "success"
+                }).then(() => {
+                    // Redireciona para a página index.html
+                    window.location.href = "index.html";
+                });
             })
             .catch((error) => {
                 console.error('Erro:', error);
