--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <title>Título da Página</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 <body>
     <header>
@@ -41,14 +43,14 @@
                             <span id="userName"></span>
                             <img id="icoVerifiedOk" name="icoVerifiedOk" src="assets/icon/verified_ok.png" style="height:22px;">
                             <button type="button" class="btn btn-outline-default position-relative">
-                                <img id="icoCartMarket" name="icoCartMarket" class="position-relative" 
+                                <img id="icoCartMarket" name="icoCartMarket" class="position-relative"
                                      src="assets/icon/cart_market.png" style="height:36px;">
-                                <span id="countProductOrder" name="countProductOrder" 
-                                     class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                                  0
-                                  <span class="visually-hidden">unread messages</span>
+                                <span id="countProductOrder" name="countProductOrder"
+                                      class="position-absolute badge rounded-pill bg-danger">
+                                    0
+                                    <span class="visually-hidden">unread messages</span>
                                 </span>
-                              </button>
+                            </button>
                         </span>
                     </form>
                 </div>
@@ -183,27 +185,27 @@
                             var colDesktop = $('<div class="col-md-4 mb-3"></div>'); // Alterado para col-md-4
 
                             var productHtml = `
-                                <div class="card" style="width: 18rem;">
-                                    <div class="d-flex justify-content-center">
-                                        <img id="productPicture" name="productPicture" class="imgDefault" src="assets/img/${product.picture}" class="card-img-top" alt="...">
-                                    </div>
-                                    <div class="card-body">
-                                        <input type="hidden" id="idProduct" name="idProduct" value="${product.id}"/>
-                                        <input type="hidden" id="amount" name="amount" value="1"/>
-                                        <h6 class="card-title text-center">${product.name}</h6>
-                                        <p id="productDetails" name="productDetails" class="card-text text-justify text-details">${product.details}</p>
-                                        <p class="text-center text-details">Valor de  <s>R$${product.valueOf}</s></p>
-                                        <p class="text-center">por <span class="badge text-bg-success">R$${product.valueFor}</span></p>
-                                        <p class="text-center"><span class="badge text-bg-danger">Desconto de ${product.discount}%</span></p>
-                                        <p class="text-center text-amount">Quantidade disponível: ${product.amount}</p>
+                                    <div class="card" style="width: 18rem;">
                                         <div class="d-flex justify-content-center">
-                                            <a href="#" class="btn btn-default btn-sm adicionarCarrinho" name="adicionarCarrinho">
-                                                <img id="icoCartPlus" name="icoCartPlus" src="assets/icon/cart_plus.png" style="height:18px;">
-                                                Adicionar no carrinho
-                                            </a>
+                                            <img id="productPicture" name="productPicture" class="imgDefault" src="assets/img/${product.picture}" class="card-img-top" alt="...">
                                         </div>
-                                    </div>
-                                </div>`;
+                                        <div class="card-body">
+                                            <input type="hidden" id="idProduct" name="idProduct" value="${product.id}"/>
+                                            <input type="hidden" id="amount" name="amount" value="1"/>
+                                            <h6 class="card-title text-center">${product.name}</h6>
+                                            <p id="productDetails" name="productDetails" class="card-text text-justify text-details">${product.details}</p>
+                                            <p class="text-center text-details">Valor de  <s>R$${product.valueOf}</s></p>
+                                            <p class="text-center">por <span class="badge text-bg-success">R$${product.valueFor}</span></p>
+                                            <p class="text-center"><span class="badge text-bg-danger">Desconto de ${product.discount}%</span></p>
+                                            <p class="text-center text-amount">Quantidade disponível: ${product.amount}</p>
+                                            <div class="d-flex justify-content-center">
+                                                <a href="#" class="btn btn-default btn-sm adicionarCarrinho" name="adicionarCarrinho">
+                                                    <img id="icoCartPlus" name="icoCartPlus" src="assets/icon/cart_plus.png" style="height:18px;">
+                                                    Adicionar no carrinho
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>`;
 
                             rowMobile.html(`<td class="d-flex align-items-center justify-content-center">${productHtml}</td>`);
                             colDesktop.html(productHtml);
@@ -226,12 +228,16 @@
                 fetch(`https://localhost:7274/api/Order/${orderId}`)
                     .then(response => response.json())
                     .then(data => {
-                        console.log('Detalhes do pedido:', data);
                         // Atualiza o elemento com o id countProductOrder
                         $('#countProductOrder').text(data);
                     })
                     .catch(error => {
                         console.error('Erro ao buscar o pedido:', error);
+                        Swal.fire({
+                            title: "Erro ao buscar!",
+                            text: "Erro ao buscar o pedido!",
+                            icon: "error"
+                        });
                     });
             }
 
@@ -245,7 +251,14 @@
                 var orderId = sessionStorage.getItem('orderId') ? sessionStorage.getItem('orderId') : 0;
 
                 if (!userId) {
-                    alert('Você precisa estar logado para adicionar produtos ao carrinho.');
+
+                    //Sweetalert2
+                    Swal.fire({
+                        title: "Você precisa estar logado!",
+                        text: "Você precisa estar logado para adicionar produtos ao carrinho!",
+                        icon: "error"
+                    });
+
                     return;
                 }
 
@@ -253,7 +266,7 @@
                     userId: userId,
                     productId: idProduct,
                     amount: amount,
-                    orderId: orderId 
+                    orderId: orderId
                 };
 
                 fetch('https://localhost:7274/api/Order', {
@@ -272,13 +285,27 @@
                         if (data.id > 0) {
                             // Salva o idOrder no sessionStorage
                             sessionStorage.setItem('orderId', data.id);
-                            alert('Produto adicionado ao carrinho com sucesso!');
+
+                            //Sweetalert2
+                            Swal.fire({
+                                title: "Produto adicionado!",
+                                text: "Produto adicionado ao carrinho com sucesso!",
+                                icon: "success"
+                            });
+
                             fetchOrderById(data.id);
                         }
                     })
                     .catch(error => {
                         console.error('Erro ao adicionar produto ao carrinho:', error);
                         alert('Erro ao adicionar produto ao carrinho.');
+
+                        //Sweetalert2
+                        Swal.fire({
+                            title: "Erro ao adicionar!",
+                            text: "Erro ao adicionar produto ao carrinho!",
+                            icon: "error"
+                        });
                     });
             });
 
@@ -307,6 +334,7 @@
                     .then(data => {
                         console.log('Sucesso:', data);
                         if (data.status) {
+
                             // Salva o username e status no sessionStorage
                             sessionStorage.setItem('id', data.id);
                             sessionStorage.setItem('name', data.name);
@@ -320,19 +348,44 @@
                             $('#userName').text(data.name);
                             $('#userGreeting').show();
 
-                            alert('Autenticação realizada com sucesso!');
+                            //Sweetalert2
+                            Swal.fire({
+                                title: "Autenticação realizada!",
+                                text: "Autenticação realizada com sucesso!",
+                                icon: "success"
+                            });
+
                             // Fechar o modal de autenticação
                             $('#modalAutenticacao').modal('hide');
                         } else {
-                            alert('Erro ao autenticar o usuário.');
+
+                            //Sweetalert2
+                            Swal.fire({
+                                title: "Erro ao autenticar!",
+                                text: "Erro ao autenticar o usuário!",
+                                icon: "error"
+                            });
                         }
                     })
                     .catch(error => {
                         console.error('Erro:', error);
                         if (error.message === 'Unauthorized') {
                             alert('Usuário ou senha incorretos.');
+
+                            //Sweetalert2
+                            Swal.fire({
+                                title: "Usuário ou senha!",
+                                text: "Usuário ou senha incorretos!",
+                                icon: "error"
+                            });
                         } else {
-                            alert('Erro ao autenticar o usuário.');
+
+                            //Sweetalert2
+                            Swal.fire({
+                                title: "Erro ao autenticar!",
+                                text: "Erro ao autenticar o usuário!",
+                                icon: "error"
+                            });
                         }
                     });
             });
