--- a/src/produto.html
+++ b/src/produto.html
@@ -6,6 +6,8 @@
     <title>Título da Página</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css"> <!-- Link para o arquivo de CSS -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 <body>
     <header>
@@ -151,11 +153,26 @@
                         data: JSON.stringify(data),
                         success: function(response) {
                             console.log('Sucesso:', response);
-                            alert('Produto adicionado com sucesso!');
+
+                            //Sweetalert2
+                            Swal.fire({
+                                title: "Produto adicionado com sucesso!",
+                                text: "Produto adicionado com sucesso!",
+                                icon: "success"
+                            }).then(() => {
+                                // Redireciona para a página index.html
+                                window.location.href = "index.html";
+                            });
                         },
                         error: function(xhr, status, error) {
                             console.error('Erro:', error);
-                            alert('Erro ao adicionar o produto.');
+
+                            //Sweetalert2
+                            Swal.fire({
+                                title: "Erro ao adicionar o produto!",
+                                text: "Erro ao adicionar o produto!",
+                                icon: "error"
+                            });
                         }
                     });
                 });
