Add ajuste pedido

--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -28,6 +28,9 @@
                             <a class="nav-link" aria-current="page" href="contato.html">Contato</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="pedido.html">Pedido</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="produto.html">Produto</a>
                         </li>
                     </ul>
